--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "gitignore": "^0.7.0"
+    "express-async-handler": "^1.2.0",
+    "gitignore": "^0.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
